@@ -1,5 +1,5 @@
 ================================================================================
-    cheat.sh        |   version 0.98    |   GPL v3 (see LICENSE)    | 2014-03-21
+    cheat.sh        |   version 0.99    |   GPL v3 (see LICENSE)    | 2014-04-05
     James Hendrie   |   hendrie.james@gmail.com
 ================================================================================
 
