@@ -19,3 +19,7 @@
 2014-03-21  0.98    Added DEFAULT_CHEAT_DIR and CHEATPATH functionality, as well
                     as changing the behavior of -l and --list to list all cheat
                     sheets.  Added -L; does the same but with full paths.
+
+2014-04-05  0.99    Addressed at least one, possible two issues spotted by user
+                    hkdobrev (help functionality issue, install issue).  Added a
+                    temporary workaround for the third (cheat_sys_dir location)
